WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275746
Calling browser.storage.set with undefined as a map value throws an exception
https://bugs.webkit.org/show_bug.cgi?id=275746
Summary
Calling browser.storage.set with undefined as a map value throws an exception
Kiara Rose
Reported
2024-06-21 12:31:17 PDT
rdar://130282050
Attachments
Add attachment
proposed patch, testcase, etc.
Kiara Rose
Comment 1
2024-06-21 15:13:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30063
EWS
Comment 2
2024-06-21 16:48:33 PDT
Committed
280265@main
(bddd449fd933): <
https://commits.webkit.org/280265@main
> Reviewed commits have been landed. Closing PR #30063 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug