Calling browser.storage.set with undefined as a map value throws an exception https://bugs.webkit.org/show_bug.cgi?id=275746 rdar://130282050

Reviewed by Timothy Hatcher and Brian Weinstein.

We shouldn't throw an exception if undefined is passed as a value for {storageArea}.set().
This matches what we do currently in Safari.

* Source/WebKit/WebProcess/Extensions/API/Cocoa/WebExtensionAPIStorageAreaCocoa.mm:
(WebKit::WebExtensionAPIStorageArea::set):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebExtensionAPIStorage.mm:
(TestWebKitAPI::TEST(WKWebExtensionAPIStorage, Set)):

Canonical link: https://commits.webkit.org/280265@main